review from Chia, replace hashmap with copyOf
Signed-off-by: see-quick <maros.orsak159@gmail.com>